--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_notxposed" formatted="false">Xposed 框架版本 %d+ 未安装</string>
+    <strinhttps://github.com/jokies/XPrivacy/tree/master/resg name="app_notxposed" formatted="false">Xposed 框架版本 %d+ 未安装</string>
     <string name="app_notenabled">XPrivacy 没有在 Xposed 框架中启用</string>
     <string name="app_wrongandroid">仅支持安卓 4.0 以上的版本</string>
     <string name="app_version" formatted="false">XPrivacy 版本: %s (%d)</string>
@@ -8,21 +8,21 @@
     <string name="app_copyright">版权所有 \u00A9 2013 M. Bokhorst (M66B)</string>
     <string name="menu_usage">权限使用日志（所有程序）</string>
     <string name="menu_refresh">刷新程序列表</string>
-    <string name="menu_settings">设置模拟信息（用于被限制应用）</string>
-    <string name="menu_template">调整默认权限模板</string>
+    <string name="menu_settings">设置模拟信息</string>
+    <string name="menu_template">调整默认权限模板（用于新安装的应用）</string>
     <string name="menu_report">报告问题</string>
-    <string name="menu_export">导出程序配置到本地</string>
-    <string name="menu_import">导入本地的程序配置</string>
+    <string name="menu_export">导出全局配置到本地存储器</string>
+    <string name="menu_import">导入本地存储器上的全局配置</string>
     <string name="menu_submit">上传权限限制规则</string>
     <string name="menu_fetch">下载权限限制规则</string>
     <string name="menu_theme">切换明/暗主题</string>
     <string name="menu_pro">捐赠/升级到专业版</string>
     <string name="menu_about">关于</string>
     <string name="menu_help">帮助</string>
-    <string name="menu_all">选择全部选框</string>
+    <string name="menu_all">选中全部选框</string>
     <string name="menu_apply">应用规则</string>
     <string name="menu_clear">清除全部选框</string>
-    <string name="menu_app_launch">启动应用程序</string>
+    <string name="menu_app_launch">启动程序</string>
     <string name="menu_app_settings">详细设置程序权限</string>
     <string name="menu_app_store">Play 商店</string>
     <string name="menu_accounts">选择允许访问的帐号</string>
@@ -33,36 +33,36 @@
     <string name="msg_loading">加载中…</string>
     <string name="msg_edit">点击应用图标以调整权限</string>
     <string name="msg_sure">是否确定?</string>
-    <string name="msg_done">完成</string>
+    <string name="msg_done">好</string>
     <string name="msg_reboot">设备需要重启</string>
     <string name="msg_random">生成随机数值</string>
-    <string name="msg_random_boot">启动时重新生成随机数值</string>
+    <string name="msg_random_boot">设备启动时重新生成随机数值</string>
     <string name="msg_first"><b>XPrivacy 的开发和测试工作已经非常全面和细致,
 但仍然不可能保证它能完美兼容所有设备及应用。
-\n\n使用者徐自行承担风险。</b>\n\n另请参阅使用许可:</string>
-    <string name="restrict_accounts">账户 (Google, Facebook等)</string>
+\n\n使用者需自行承担风险。</b>\n\n另请参阅使用许可:</string>
+    <string name="restrict_accounts">账户 (Google/Facebook账户)</string>
     <string name="restrict_browser">浏览器 (书签/历史)</string>
     <string name="restrict_calendar">日历</string>
-    <string name="restrict_calling">通话 (语音, 短信, 彩信)</string>
+    <string name="restrict_calling">通话 (语音/短信/彩信)</string>
     <string name="restrict_clipboard">剪贴板</string>
-    <string name="restrict_contacts">联系人</string>
-    <string name="restrict_dictionary">词典 (用户)</string>
+    <string name="restrict_contacts">联系人(通讯录)</string>
+    <string name="restrict_dictionary">词典 (用户词典)</string>
     <string name="restrict_email">E-mail</string>
-    <string name="restrict_identification">识别码 (设备)</string>
-    <string name="restrict_internet">互联网</string>
+    <string name="restrict_identification">识别码 (设备识别信息)</string>
+    <string name="restrict_internet">互联网(网络通讯)</string>
     <string name="restrict_location">位置 (精确/粗略)</string>
-    <string name="restrict_media">媒体 (声音, 图片, 视频)</string>
-    <string name="restrict_messages">信息 (短信, 彩信)</string>
+    <string name="restrict_media">媒体 (声音/图片/视频)</string>
+    <string name="restrict_messages">信息 (短信/彩信)</string>
     <string name="restrict_network">网络 (地址)</string>
-    <string name="restrict_notifications">通知</string>
-    <string name="restrict_phone">电话 ( 电话号码, 通话状态)</string>
-    <string name="restrict_sensors">感应器（重力/加速度）</string>
-    <string name="restrict_storage">存储 (内置存储器, SD 卡)</string>
-    <string name="restrict_shell">命令行 (命令, 超级用户)</string>
+    <string name="restrict_notifications">通知(通知栏提示)</string>
+    <string name="restrict_phone">电话 ( 电话号码/通话状态)</string>
+    <string name="restrict_sensors">感应器（重力方向/光线强度）</string>
+    <string name="restrict_storage">存储 (内置存储器/ SD 卡)</string>
+    <string name="restrict_shell">命令行 (执行命令/获得超级用户权限)</string>
     <string name="restrict_system">系统 (已安装的应用)</string>
     <string name="restrict_view">显示网页 (浏览器)</string>
     <string name="title_category">权限类型:</string>
-    <string name="title_restrict">勾选表示限制:</string>
+    <string name="title_restrict">勾选的权限将被限制:</string>
     <string name="title_nofilter">无过滤器</string>
 
     <plurals name="title_filters">
@@ -70,7 +70,7 @@
         <item quantity="other">%d 个已启用的过滤器</item>
     </plurals>
 
-    <string name="title_fused">已使用当前类型权限的应用</string>
+    <string name="title_fused">曾使用当前选中类型权限的应用</string>
     <string name="title_finternet">含有联网权限的应用</string>
     <string name="title_fpermission">仅显示应用已申请的权限</string>
     <string name="title_frestricted">仅显示已限制权限的应用</string>
@@ -89,13 +89,13 @@
     <string name="settings_subscriber">IMSI</string>
     <string name="settings_ua">User Agent</string>
     <string name="settings_notify">Update notifications</string>
-    <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_usage">Android 程序用量统计数据 (需要重启)</string>
     <string name="settings_log">调试日志 (需要重启)</string>
-    <string name="help_application">应用程序</string>
-    <string name="help_internet">应用含有联网权限</string>
-    <string name="help_granted">应用尝试申请的权限</string>
-    <string name="help_used">应用已经使用的权限</string>
-    <string name="help_frozen">应用已被冻结/停用</string>
+    <string name="help_application">程序标记说明</string>
+    <string name="help_internet">程序含有联网权限</string>
+    <string name="help_granted">程序已申请的权限( Androidmanifest )</string>
+    <string name="help_used">程序已经使用的权限</string>
+    <string name="help_frozen">程序已被冻结/停用</string>
     <string name="help_dangerous">可能导致隐私泄漏的权限</string>
 
 </resources>
