--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -93,6 +93,7 @@
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug log (richiede riavvio)</string>
+    <string name="settings_expert">Expert mode</string>
     <string name="help_application">Applicazione</string>
     <string name="help_internet">ha permesso internet</string>
     <string name="help_granted">ha permesso Android</string>
