--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -94,6 +94,7 @@
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Отладочный лог (требует перезагрузки)</string>
+    <string name="settings_expert">Expert mode</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">запрашивает доступ в интернет</string>
     <string name="help_granted">имеет разрешение Android</string>
