--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -94,6 +94,7 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Využitie dát (vyžaduje reštart)</string>
     <string name="settings_log">Záznam na ladenie (vyžaduje reštart)</string>
+    <string name="settings_expert">Expert mode</string>
     <string name="help_application">Aplikácia</string>
     <string name="help_internet">má internetové povolenie</string>
     <string name="help_granted">má Android povolenie</string>
