--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -95,6 +95,7 @@
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug log (zahteva ponovni zagon)</string>
+    <string name="settings_expert">Expert mode</string>
     <string name="help_application">Program</string>
     <string name="help_internet">uporablja internetne pravice</string>
     <string name="help_granted">uporablja Android pravice</string>
