--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -93,6 +93,7 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Felsökningslogg (kräver omstart)</string>
+    <string name="settings_expert">Expert mode</string>
     <string name="help_application">Applikation</string>
     <string name="help_internet">har internetbehörighet</string>
     <string name="help_granted">har Android-behörighet</string>
