--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -104,6 +104,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug log (requires restart)</string>
+    <string name="settings_expert">Expert mode</string>
     <string name="help_application">Application</string>
     <string name="help_internet">has internet permission</string>
     <string name="help_granted">has Android permission</string>
