--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -23,7 +23,7 @@
     <string name="menu_apply">套用默认权限模板</string>
     <string name="menu_clear">清除默认权限模板</string>
     <string name="menu_app_launch">启动应用</string>
-    <string name="menu_app_settings">应用详情</string>
+    <string name="menu_app_settings">应用信息</string>
     <string name="menu_app_store">Play 商店</string>
     <string name="menu_accounts">选择允许访问的帐号</string>
     <string name="menu_applications">选择允许访问的应用</string>
@@ -94,7 +94,7 @@
     <string name="settings_usage">Android 应用用量统计数据（需要重启）</string>
     <string name="settings_log">调试日志（需要重启）</string>
     <string name="settings_expert">专家模式</string>
-    <string name="help_application">应用标记说明</string>
+    <string name="help_application">应用详情</string>
     <string name="help_internet">应用含有联网权限</string>
     <string name="help_granted">应用已申请的权限（ Androidmanifest 中表明）</string>
     <string name="help_used">应用已使用的权限</string>
