--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -63,7 +63,7 @@
     <string name="restrict_system">系统（查看已安装的应用）</string>
     <string name="restrict_view">显示网页（内置浏览器）</string>
     <string name="title_category">权限类型:</string>
-    <string name="title_restrict">勾选的权限将被限制:</string>
+    <string name="title_restrict">勾选表示限制:</string>
     <string name="title_nofilter">无过滤器</string>
 
     <plurals name="title_filters">
