--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -93,7 +93,7 @@
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_log">Debug-Log (erfordert Geräteneustart)</string>
-    <string name="settings_expert">Expert mode</string>
+    <string name="settings_expert">Experten-Modus</string>
     <string name="help_application">App</string>
     <string name="help_internet">hat Internet-Berechtigung</string>
     <string name="help_granted">hat Android-Berechtigung</string>
