--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_app_settings">App-Info anzeigen</string>
     <string name="menu_app_store">Im Play Store anzeigen</string>
     <string name="menu_accounts">Konten für Zugriff freigeben</string>
-    <string name="menu_applications">Select applications to allow</string>
+    <string name="menu_applications">Apps für Zugriff freigeben</string>
     <string name="menu_contacts">Kontakte für Zugriff freigeben</string>
     <string name="msg_new">Neu</string>
     <string name="msg_update">Update</string>
