--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -71,10 +71,11 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="title_restrict">Check to restrict:</string>
     <string name="title_nofilter">Filters: 0 active</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">Filters: 1 active</item>
         <item quantity="other">Filters: %d active</item>
     </plurals>
+    <string name="title_filters">Filters</string>
 	<string name="title_batch_mode_off">Batch mode: off</string>
     <string name="title_batch_mode_on">Batch mode: on</string>
     <string name="title_fused">Filter on data usage</string>
