--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_help" translatable="false">https://github.com/M66B/XPrivacy#xprivacy</string>
     <string name="app_support" translatable="false">http://forum.xda-developers.com/showthread.php?t=2320783</string>
-    <string name="menu_usage">Usage</string>
+    <string name="menu_usage">Usage data</string>
     <string name="menu_refresh">Refresh</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_template">Template</string>
@@ -23,7 +23,8 @@
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">About</string>
     <string name="menu_help">Help</string>
-    <string name="menu_all">All</string>
+    <string name="menu_all">Toggle restrictions</string>
+    <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Launch</string>
