--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">Σχετικά</string>
     <string name="menu_help">Βοήθεια</string>
     <string name="menu_all">Όλα</string>
+    <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Εκκαθάριση</string>
     <string name="menu_app_launch">Εκκίνηση</string>
