--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">Om</string>
     <string name="menu_help">Hjälp</string>
     <string name="menu_all">Alla</string>
+    <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">Applicera mall</string>
     <string name="menu_clear">Rensa</string>
     <string name="menu_app_launch">Starta</string>
