--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">關於</string>
     <string name="menu_help">說明</string>
     <string name="menu_all">全部</string>
+    <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">套用預設規則</string>
     <string name="menu_clear">清空</string>
     <string name="menu_app_launch">執行</string>
