--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -20,14 +20,14 @@
     <string name="menu_about">عن التطبيق</string>
     <string name="menu_help">مساعدة</string>
     <string name="menu_all">تحديد الكل</string>
-    <string name="menu_usage_all">Toggle filter</string>
+    <string name="menu_usage_all">تغيير الفلتر</string>
     <string name="menu_apply">تطبيق القالب</string>
     <string name="menu_clear">إلغاء التحديد</string>
     <string name="menu_app_launch">تشغيل التطبيق</string>
     <string name="menu_app_settings">إعدادات التطبيق</string>
     <string name="menu_app_store">متجر قوقل</string>
+    <string name="menu_applications">إختر التطبيقات التي تود تمكينها</string>
     <string name="menu_accounts">إختر الحسابات التي تود تمكينها</string>
-    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">إختر الأسماء التي تود تمكينها</string>
     <string name="msg_new">جديد</string>
     <string name="msg_update">تحديث</string>
@@ -58,7 +58,7 @@
     <string name="restrict_network">الشبكة (العناوين)</string>
     <string name="restrict_notifications">الإشعارات</string>
     <string name="restrict_phone">الهاتف (المعرف,الأرقام,المكالمات)</string>
-    <string name="restrict_sensors">Sensors</string>
+    <string name="restrict_sensors">الحساسات</string>
     <string name="restrict_storage">التخزين (الميديا’الذاكرة الخارجية)</string>
     <string name="restrict_shell">سطر الأوامر (الأوامر,المستخدم الجذر)</string>
     <string name="restrict_system">النظام (البرامج المنزلة)</string>
@@ -78,7 +78,7 @@
     <string name="title_frestricted">التصفية حسب التقييد</string>
     <string name="title_fuser">تصفية برامج المستخدم</string>
     <string name="title_fsystem">تصفية برامج النظام</string>
-    <string name="title_fnot">Negate</string>
+    <string name="title_fnot">العكس</string>
     <string name="settings_serial">السيريال#</string>
     <string name="settings_lat">خط العرض</string>
     <string name="settings_lon">خط الطول</string>
@@ -86,15 +86,15 @@
     <string name="settings_ip">عنوان الايبي</string>
     <string name="settings_phone">رقم الهاتف</string>
     <string name="settings_id">هوية اندرويد</string>
-    <string name="settings_adid">Advertisement ID</string>
+    <string name="settings_adid">رقم تعريف الإعلان</string>
     <string name="settings_country">الدولة</string>
     <string name="settings_operator">المُشغل</string>
-    <string name="settings_subscriber">IMSI</string>
+    <string name="settings_subscriber">IMSI(الهوية العالمية لمشتركي الهواتف)</string>
     <string name="settings_ua">وكيل المستخدم</string>
-    <string name="settings_notify">Update notifications</string>
-    <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_notify">تحديث الإشعارات</string>
+    <string name="settings_usage">بيانات إستخدام الأندرويد (يتطلب إعادة التشغيل)</string>
     <string name="settings_log"> سِجِل تصحيح الأخطاء (يتطلب إعادة التشغيل) </string>
-    <string name="settings_expert">Expert mode</string>
+    <string name="settings_expert">وضع الخبراء</string>
     <string name="help_application">التطبيق</string>
     <string name="help_internet">لديه صلاحية الوصول للإنترنت</string>
     <string name="help_granted">لديه صلاحية أندرويد</string>
