--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">Programmist</string>
     <string name="menu_help">Abi</string>
     <string name="menu_all">Kõik</string>
+    <string name="menu_restriction_all">Toggle restrictions</string>
     <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Tühjenda</string>
