--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,7 +23,8 @@
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">About</string>
     <string name="menu_help">Help</string>
-    <string name="menu_all">Toggle restrictions</string>
+    <string name="menu_all">All</string>
+    <string name="menu_restriction_all">Toggle restrictions</string>
     <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Clear</string>
