--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -19,7 +19,8 @@
     <string name="menu_pro">Pro verzia</string>
     <string name="menu_about">O aplikácii</string>
     <string name="menu_help">Nápoveda</string>
-    <string name="menu_all">Prepnúť obmedzenia</string>
+    <string name="menu_all">Všetko</string>
+    <string name="menu_restriction_all">Prepnúť obmedzenia</string>
     <string name="menu_usage_all">Prepnúť filter</string>
     <string name="menu_apply">Použiť šablónu</string>
     <string name="menu_clear">Vyčistiť</string>
