--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -94,6 +94,7 @@
     <string name="settings_ua">User agent</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Debug log (requires restart)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Εφαρμογή</string>
