--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -94,6 +94,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_ua">Vartotojo agentas</string>
     <string name="settings_notify">Atnaujinimų Pranesimas</string>
     <string name="settings_usage">Android naudojimo duomenys (reikia paleisti iš naujo)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">DEBUG žurnalas (reikia paleisti iš naujo)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Programa</string>
