--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -92,6 +92,7 @@
     <string name="settings_ua">Agent d\'usuari</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Registre de depuració (cal reiniciar)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Aplicació</string>
