--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -94,6 +94,7 @@ kuid on võimatu garanteerida, et see töötab igal seadmel ja iga rakendusega.
     <string name="settings_ua">Kasutaja agent</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Silumislogi (nõuab restarti)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Rakendus</string>
