--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -94,6 +94,7 @@ sin embargo es imposible garantizar que funcione impecable en todos y cada uno d
     <string name="settings_ua">Agente de usuario</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Registro de depuración (requiere inicio)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Aplicación</string>
