--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -94,6 +94,7 @@
     <string name="settings_ua">ユーザーエージェント</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">デバッグログ(要再起動)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">アプリ</string>
