--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -95,6 +95,7 @@
     <string name="settings_ua">User agent</string>
     <string name="settings_notify">Aktualizuj powiadomienia</string>
     <string name="settings_usage">Android usage data (wymaga restartu)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Debug log (wymaga restartu)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Aplikacja</string>
