--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -94,6 +94,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="settings_ua">User agent</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Relatório de depuração (requer reinicialização)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Aplicação</string>
