--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -95,6 +95,7 @@
     <string name="settings_ua">User agent</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Отладочный лог (требует перезагрузки)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Приложение</string>
