--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -96,6 +96,7 @@
     <string name="settings_ua">User agent</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Debug log (zahteva ponovni zagon)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Program</string>
