--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -93,6 +93,7 @@
     <string name="settings_ua">User agent</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Hata ayıklama modu (Yeniden başlatma gerekir)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Uygulama</string>
