--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -93,6 +93,7 @@
     <string name="settings_ua">Nhận dạng trình duyệt</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Mức sử dụng hệ thống (yêu cầu khởi động lại)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">Nhật ký lỗi (yêu cầu khởi động lại)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="help_application">Ứng dụng</string>
