Settings dialog rethink
Settings are now organised into GENERAL and FAKE DATA.
Randomize on boot checkbox disables the randomisable data inputs.

Added a checkbox in app settings to use global settings. The detection 
code is a new function in PrivacyManager which checks to see if serial#
returns null for that uid. The result is functionality similar to the 
old use of the Clear button. The checkbox also disables the fake data 
inputs.

Two problems remain:
1. strings need to be added for all languages.
2. textedits at the bottom of the screen get covered by the keyboard.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,8 +42,9 @@
     <string name="msg_sure">Are you sure?</string>
     <string name="msg_done">Done</string>
     <string name="msg_reboot">Device restart required</string>
-    <string name="msg_random">Randomize</string>
-    <string name="msg_random_boot">Randomize after boot</string>
+    <string name="msg_random_now">Randomize now</string>
+    <string name="msg_random_access">Randomize on access</string>
+    <string name="msg_random_boot">Randomize on boot</string>
     <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
 however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
 \n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
